syntax = "proto3";

package domain;

option go_package = "compliance-hub-plugin-trivy/internal/gRPC/basic/domain";

message Command {
    string command = 1;
}

message AssetType {
    string type = 1;
}

message AssetRole {
    AssetType assetType = 1;
    string role = 2;
	bool requestsAssets = 3;
    Command command = 4;
}

message Manifest {
	string uuid = 1;
	string name = 2;
	repeated AssetRole assetRoles = 3;
	repeated Command commands = 4;
}

message Asset {
    string uuid = 1;
    string type = 2;
    string subType = 3;
    string identifier = 4;
    string status = 5;
    string attributesUuid = 6;
    bytes attributes = 7;
}

message Account {
    string uuid = 1;
    string name = 2;
    string provider = 3;
    string credentials = 4;
}