syntax = "proto3";

package service;

option go_package = "compliance-hub-plugin-trivy/internal/gRPC/basic/service";

import "compliance-hub-plugin-trivy/internal/proto-files/basic/domain/manifest.proto";

//ManifestService Definition
service ManifestService {
    // getManifest returns a Manifest detailing commands that can use used via executeCommand
	rpc getManifest(GetManifestRequest) returns (GetManifestResponse);
    // executeCommand instructs the plugin to run the indicated command and can return an arbitary json response.
	rpc executeCommand(ExecuteCommandRequest) returns (ExecuteCommandResponse);
	//
    rpc assets(stream AssetResponse) returns (stream AssetRequest);
}

message GetManifestRequest {
}

message GetManifestResponse {
	domain.Manifest manifest = 1;
	Error error = 2;
}

message Error {
	string code = 1;
	string message = 2;
}

message ExecuteCommandRequest {
    string command = 1;
}

message ExecuteCommandResponse {
	bytes payload = 1;
	Error error = 2;
}

message AssetResponse {
    string requestUuid = 1;
    int32 number = 2;
    int32 total = 3;
    domain.Asset asset = 4;
}

message AssetRequest {
    string requestUuid = 1;
    domain.AssetType type = 2;
    domain.Account account = 3;
    repeated string subTypes = 4;
}